[package]
name = "wr_glyph_rasterizer"
version = "0.1.0"
authors = ["The Mozilla Project Developers"]
description = "A glyph rasterizer for WebRender"
license = "MPL-2.0"
edition = "2018"

[features]
default = ["backend_native", "static_freetype"]
dynamic_freetype = []
static_freetype = ["freetype/freetype-sys"]
capture = ["api/serialize", "serde", "smallvec/serde"]
replay = ["api/deserialize", "serde", "smallvec/serde"]
gecko = ["firefox-on-glean", "glean"]
backend_swash = ["swash", "zeno", "font-index", "api/font_backend_swash"]
backend_fontdue = ["fontdue", "ttf-parser", "resvg", "usvg", "tiny-skia", "tiny-skia-path", "parking_lot"]
backend_native = [
  "freetype", "libc",
  "dwrote",
  "core-foundation", "core-graphics", "core-text", "objc"]

[dependencies]
api = { version = "0.62.0", path = "../webrender_api", package = "webrender_api" }
euclid = { version = "0.22.0", features = ["serde"] }
malloc_size_of = { version = "0.0.2", path = "../wr_malloc_size_of", package = "wr_malloc_size_of" }
malloc_size_of_derive = "0.1"
rayon = "1"
smallvec = "1"
tracy-rs = "0.1.2"
log = "0.4"
lazy_static = "1"
fxhash = "0.2.1"
glean = { version = "57.0.0", optional = true }
firefox-on-glean = { version = "0.1.0", optional = true }
serde = { optional = true, version = "1.0", features = ["serde_derive"] }
fontdue = { version = "0.7", features = ["parallel"], optional = true }
ttf-parser = { version = "0.19", optional = true }
resvg = { version = "0.29", optional = true }
usvg = { version = "0.29", optional = true }
tiny-skia = { version = "0.8", optional = true }
tiny-skia-path = { version = "0.8", optional = true }
parking_lot = { version = "0.12", optional = true }
swash = { version = "0.1", optional = true }
zeno = { version = "0.2.2", optional = true }
font-index = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = { version = "0.10", default_features = false }
euclid = "0.22"
gleam = "0.15"
glutin = "0.28"
rayon = "1"
winit = "0.26"

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
freetype = { version = "0.7", default-features = false, optional = true }
libc = {version = "0.2", optional = true}

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = { version = "0.11", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = {version = "0.9.2", optional = true }
core-graphics = {version = "0.23", optional = true }
core-text = { version = "20.1", default-features = false, optional = true }
objc = { version = "0.2", optional = true }
